# REInstruct

./: README.md  pyproject.toml
data/: dummy_instruction_data.json  verbs-all.json
re_instruct/: constants.py  data_collator.py  utils.py
re_instruct/data/: filter_rewritten.py  prepare_unlabeled_texts.py  report_data.py  sunburst_visualize.py
re_instruct/inference/: generate_inst.py  generate_output.py  generate_rewritten.py
re_instruct/train/: reverse.py  rewrite.py  sft.py
