[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "re_instruct"
version = "0.0.1"
description = "REInstruct: Building Instruction Data from Unlabeled Corpus"
requires-python = ">=3.8"
dependencies = [
    "torch==2.1.2",
    "transformers==4.37.0",
    "accelerate==0.26.1",
    "datasets",
    "fire",
    "wandb",
    "spacy",
    "benepar",
    "plotly",
    "kaleido",
]

[tool.setuptools.packages.find]
exclude = ["data*"]
